syntax = "proto3";
package rpcpb;

import "github.com/coreos/matchbox/matchbox/server/serverpb/messages.proto";

service Groups {
  // Create a Group.
  rpc GroupPut(serverpb.GroupPutRequest) returns (serverpb.GroupPutResponse) {};
  // Get a machine Group by id.
  rpc GroupGet(serverpb.GroupGetRequest) returns (serverpb.GroupGetResponse) {};
  // Delete a machine Group by id.
  rpc GroupDelete(serverpb.GroupDeleteRequest) returns (serverpb.GroupDeleteResponse) {};
  // List all machine Groups.
  rpc GroupList(serverpb.GroupListRequest) returns (serverpb.GroupListResponse) {};
}

service Profiles {
  // Create a Profile.
  rpc ProfilePut(serverpb.ProfilePutRequest) returns (serverpb.ProfilePutResponse) {};
  // Get a Profile by id.
  rpc ProfileGet(serverpb.ProfileGetRequest) returns (serverpb.ProfileGetResponse) {};
  // Delete a Profile by id.
  rpc ProfileDelete(serverpb.ProfileDeleteRequest) returns (serverpb.ProfileDeleteResponse) {};
  // List all Profiles.
  rpc ProfileList(serverpb.ProfileListRequest) returns (serverpb.ProfileListResponse) {};
}

service Templates {
  // Create or update a template.
  rpc TemplatePut(serverpb.TemplatePutRequest) returns (serverpb.TemplatePutResponse) {};
  // Get a template by id.
  rpc TemplateGet(serverpb.TemplateGetRequest) returns (serverpb.TemplateGetResponse) {};
  // Delete a template by id.
  rpc TemplateDelete(serverpb.TemplateDeleteRequest) returns (serverpb.TemplateDeleteResponse) {};
  // List all templates available.
  rpc TemplateList(serverpb.TemplateListRequest) returns (serverpb.TemplateListResponse) {};
}

service Select {
  // SelectGroup returns the Group matching the given labels.
  rpc SelectGroup(serverpb.SelectGroupRequest) returns (serverpb.SelectGroupResponse) {};
  // SelectProfile returns the Profile matching the given labels.
  rpc SelectProfile(serverpb.SelectProfileRequest) returns (serverpb.SelectProfileResponse) {};
}

service Version {
  // VersionReport returns current server Version
  rpc VersionReport(serverpb.VersionReportRequest) returns (serverpb.VersionReportResponse) {};
}
